--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,6 +7,8 @@
     {% if site.ga_tracking != nil %}
       {% assign ga_tracking_ids = site.ga_tracking | split: "," %}
       <script async src="https://www.googletagmanager.com/gtag/js?id={{ ga_tracking_ids.first }}"></script>
+      <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+      <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
       <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
